force-app/main/default/objects/Account/fields/Number_of_Open_Cases__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Open_Cases__c</fullName>
    <description>The number of open Cases against this Account</description>
    <inlineHelpText>The number of open Cases against this Account</inlineHelpText>
    <label>Number of Open Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>