force-app/main/default/objects/Account/fields/Registration_Key__c.field-meta.xml
<CustomField>
    <fullName>Registration_Key__c</fullName>
    <description>The secret key return by the Account Registration API</description>
    <inlineHelpText>The secret key return by the Account Registration API</inlineHelpText>
    <label>Registration Key</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>